Fixes for navbar, footer and section services on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ body {
 }
 
 .container,
-.navigation {
+.navigation,
+.footer-container {
   max-width: 1140px;
   padding: 0 20px;
   margin: 0 auto;
@@ -122,6 +123,13 @@ header .splash-welcome a {
   padding: 24px 0;
 }
 
+.navigation .navbar {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+}
+
 .navigation ul {
   padding: 0;
   margin: 0;
@@ -135,8 +143,7 @@ header .splash-welcome a {
   position: relative;
 }
 
-.navigation ul li:first-child {
-  margin-right: 500px;
+.navigation ul.dark {
   font-family: 'Lobster', cursive;
 }
 
@@ -155,47 +162,36 @@ header .splash-welcome a {
 .services .wrapper {
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -ms-flex-pack: justify;
       justify-content: space-between;
 }
 
 .services .wrapper .boxes {
-  -ms-flex: 0 0 33.333%;
-      flex: 0 0 33.333%;
-  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-direction: column;
+      flex-direction: column;
   height: 280px;
+  padding: 18px;
 }
 
-.services .box-title {
+.services .wrapper .boxes .box-title {
   font-size: 28px;
-  margin: 0 0 12px 0;
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translateX(-50%);
+  margin: 0 0 18px 0;
 }
 
-.services .box-title:nth-child(2) {
-  width: 65%;
-}
-
-.services .boxes i {
+.services .wrapper .boxes i {
   font-size: 28px;
-  position: absolute;
-  top: 10;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-bottom: 18px;
   color: #696969;
 }
 
-.services .boxes p {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 90%;
-  transform: translateX(-50%);
+.services .wrapper .boxes p {
+  text-align: center;
 }
 
 /* Portfolio */
@@ -237,12 +233,12 @@ header .splash-welcome a {
 }
 
 .portfolio .box-description h4,
-p {
+.portfolio p {
   text-align: center;
   margin: 0;
 }
 
-.portfolio .box-description p {
+.portfolio .portfolio .box-description p {
   margin: 0;
   font-style: italic;
   font-size: 12px;
@@ -251,15 +247,34 @@ p {
 /* Footer */
 footer {
   font-size: 24px;
-  position: relative;
+}
+
+footer .footer-container {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: start;
+      justify-content: flex-start;
 }
 
 footer ul {
   list-style: none;
   text-align: center;
+  width: 33%;
+  padding-left: 0;
 }
 
-footer ul li {
+footer ul li a i {
+  color: #fff;
+}
+
+footer .footer-content li {
+  display: inline-block;
+  line-height: 45px;
+  height: 45px;
+  margin: 18px 8px 18px 0;
+}
+
+footer .footer-logos li {
   display: inline-block;
   width: 45px;
   height: 45px;
@@ -270,49 +285,53 @@ footer ul li {
   transition: .5s;
 }
 
-footer ul li a i {
-  color: #fff;
-}
-
-footer ul li:hover,
-footer a:hover {
+footer .footer-logos li:hover,
+footer footer a:hover {
   transform: scale(1.2);
 }
 
-.footer-content {
-  position: absolute;
-  top: 45%;
-  left: 30%;
-  transform: translate(-45%, -30%);
-}
-
-.footer-content a {
+footer .footer-content a {
   text-decoration: none;
   color: #696969;
 }
 
-.footer-content a:hover:first-child {
+footer .footer-content li:first-child a:hover {
   cursor: default;
 }
 
 /* MEDIA */
 @media (max-width: 767px) {
   header .splash-welcome {
-    width: 85%;
+    width: 100%;
     text-align: center;
   }
   header .splash-welcome h1 {
     font-size: 18px;
+    margin-bottom: 12px;
   }
   header .splash-welcome h3 {
     font-size: 28px;
     margin-bottom: 24px;
   }
+  .navbar {
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -ms-flex-align: center;
+        align-items: center;
+  }
+  .navigation ul li {
+    margin-right: 12px;
+  }
   .navigation ul li a {
     font-size: 12px;
   }
-  .navigation ul li:first-child {
-    margin-right: 40px;
+  section .section-title {
+    font-size: 36px;
+  }
+  section .section-subtitle {
+    font-size: 14px;
   }
   .services .container .wrapper {
     -ms-flex-direction: column;
@@ -320,10 +339,6 @@ footer a:hover {
   }
   .services .wrapper .boxes {
     margin-bottom: 48px;
-    width: 70%;
-    left: 50%;
-    transform: translate(-50%);
-    height: 100%;
   }
   .portfolio .photo-boxes {
     -ms-flex: 50%;
@@ -331,15 +346,20 @@ footer a:hover {
   }
   footer {
     font-size: 18px;
-    height: 200px;
+    padding: 12px;
+  }
+  footer .footer-container {
+    -ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
+    -ms-flex-align: center;
+        align-items: center;
   }
   footer ul {
-    padding: 0;
+    width: 100%;
   }
-  .footer-content {
-    top: 60%;
-    left: 50%;
-    transform: translate(-60%, -50%);
+  footer .footer-logos,
+  footer .footer-content {
+    margin: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
